# turtlebot4_project

./: LICENSE  README.md
routers_backup/: readme.md
tb4_ws/: Configure_instruction.md
tb4_ws/install/: local_setup.sh  setup.sh
tb4_ws/install/tb4_aoa_viz/lib/tb4_aoa_viz/: aoa_marker_node  aoa_tx2rx_node
tb4_ws/install/tb4_aoa_viz/share/tb4_aoa_viz/: aoa_marker.launch.py  aoa_tx2rx.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tb4_ws/log/: latest_build
tb4_ws/src/ptuD48_control/: ptu_api.py  readme.md  test_ptu.py
tb4_ws/src/tb4_aoa_viz/: package.xml  setup.cfg  setup.py
tb4_ws/src/tb4_aoa_viz/resource/: tb4_aoa_viz
tb4_ws/src/tb4_aoa_viz/tb4_aoa_viz/: aoa_bridge.py  aoa_marker.launch.py  aoa_marker.launch.py.bk  aoa_marker_node.py  aoa_marker_node.py.bk  aoa_tx2rx.launch.py  aoa_tx2rx_node.py  motion_simple.py  snr_bridge.py  test_motion.py
tb4_ws/src/turtlebot_motion_control/: map_motion_api.py  motion_simple.py  readme.md  test_motion.py
test_aoa/: my_reader.py  my_reader_dual.py  readme.md
